# fakecnc

./: .gitignore  cleansrc.sh  donotReadMe
fakedoc/: assign.makefile  foo.c  origin.makefile  trace.makefile
lib/python/: hal.py  pyvcp_widgets.py  vcpparse.py
scripts/: fake.ini  haltcl.in  linuxcnc.in  realtime.in  test-libgl-bug.sh
scripts/functions/: getopts.sh  program_availabe.sh  usage.sh
src/: Makefile  Makefile.inc.in  autogen.sh  configure.in
src/emc/: Makefile
src/emc/canterp/: canterp.cc
src/emc/ini/: Makefile  check_emcinifile.cc  check_iniaxis.cc  check_iniaxis.hh  emcIniFile.cc  emcIniFile.hh  iniaxis.cc  iniaxis.hh  inihal.cc  inihal.hh  initool.cc  initool.hh  initraj.cc  initraj.hh
src/emc/iotask/: ioControl.cc  ioControl_v2.cc
src/emc/kinematics/: 5axiskins.c  cubic.c  cubic.h  gantrykins.c  genhexkins.c  genhexkins.h  genserkins.c  genserkins.h  kinematics.h  pumakins.c  pumakins.h  rotatekins.c  scarakins.c  tripodkins.c  trivkins.c
src/emc/motion/: Makefile  emcmotcfg.h  halcmd.c  io.c  linuxcncsvr  linuxcncsvr.c  motion.c
src/emc/nml_intf/: Makefile  canon.hh  canon_position.hh  debugflags.h  emc.cc  emc.hh  emc_nml.hh  emccfg.h  emcglb.c  emcglb.h  emcpos.h  motion_types.h
src/emc/rs274ngc/: rs274ngc.hh
src/emc/task/: Makefile  fakemilltask.c
src/emc/user_comps/: pyvcp.py
src/emc/usr_intf/: Makefile  keystick.cc
src/emc/usr_intf/axis/: Makefile  makeicon.py
src/emc/usr_intf/axis/extensions/: LICENSE-Togl  Makefile  _toglmodule.c  emcmodule.cc  minigl.c  togl.c  togl.h
src/emc/usr_intf/testnothing/: Makefile  main.c
src/fakesrc/: Makefile  notimplement.cc  notimplement.hh  showLoadhal.py  showLoadlinuxcnc.py  showPyvcp.py  showTkinter.py  testreport.cc  wish.c
src/hal/: Makefile  halmodule.cc
src/hal/classicladder/: config.h
src/hal/user_comps/: pyvcp.py  test.xml  vcptest.py
src/libnml/: Makefile  cmd_msg.hh  nml.hh
src/libnml/buffer/: locmem.cc  locmem.hh  memsem.cc  memsem.hh  phantom.cc  phantom.hh  physmem.cc  physmem.hh  recvn.c  recvn.h  rem_msg.hh  sendn.c  sendn.h  shmem.cc  shmem.hh  tcpmem.cc  tcpmem.hh
src/libnml/cms/: Makefile  check_tcp_opts.cc  cms.cc  cms.hh  cms_aup.cc  cms_aup.hh  cms_cfg.cc  cms_cfg.hh  cms_dup.cc  cms_dup.hh  cms_in.cc  cms_pm.cc  cms_srv.cc  cms_srv.hh  cms_up.cc  cms_up.hh  cms_user.hh  cms_xup.cc  cms_xup.hh  cmsdiag.hh  cmsdialog.cc  cmsdialog.hh  cmssvrp.cc  tcp_opts.cc  tcp_opts.hh  tcp_srv.cc  tcp_srv.hh
src/libnml/inifile/: Makefile  inifile.cc  inifile.h  inifile.hh  inivar.c  testinifile.c
src/libnml/linklist/: Makefile  linklist.cc  linklist.hh  testlinklist.cc
src/libnml/nml/: cmd_msg.cc  cmd_msg.hh  nml.cc  nml.hh  nml_mod.cc  nml_mod.hh  nml_oi.cc  nml_oi.hh  nml_srv.cc  nml_srv.hh  nml_type.hh  nmldiag.cc  nmldiag.hh  nmlmsg.cc  nmlmsg.hh  stat_msg.cc  stat_msg.hh
src/libnml/os_intf/: Makefile  _sem.c  _sem.h  _shm.c  _shm.h  _timer.c  _timer.h  inetfile.hh  inetnull.cc  os_intf_hold.cc  os_intf_hold.hh  sem.cc  sem.hh  shm.cc  shm.hh  test_sem.c  testsem.cc  testshmc.c  testshmp.cc  testtimerc.c  testtimerp.cc  timer.cc  timer.hh
src/libnml/posemath/: Makefile  _posemath.c  check_sincos.c  gomath.c  gomath.h  gotypes.h  posemath.cc  posemath.h  sincos.c  sincos.h
src/libnml/rcs/: Makefile  rcs.hh  rcs_exit.cc  rcs_exit.hh  rcs_print.cc  rcs_print.hh  rcs_print_test.cc  rcsversion.h
src/m4/: ax_cxx_compile_stdcxx_11.m4
tcl/: readme
