AC_PREREQ(2.53)
AC_INIT(FakeCNC,m4_normalize(esyscmd([cat ../VERSION])),fake-developers@fake.fake)
AC_CONFIG_SRCDIR(emc/motion/motion.c)
AC_CONFIG_FILES(Makefile.inc)
AC_CONFIG_FILES(Makefile.modinc)
AC_CONFIG_HEADER(config.h)
AC_CONFIG_FILES([../scripts/linuxcnc], [chmod +x ../scripts/linuxcnc])
AC_OUTPUT()
